--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Yash</h1>
-    <h2>a B.Tech Scholar.</h2>
+    <h2>a Software Engineer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
 
@@ -23,20 +23,22 @@
   <div class="middle-container">
     <div class="profile">
       <img class="myPhoto"src="yash.png" alt="My Photo">
-      <h2>Hello.</h2>
-      <p class="intro">I am pursuing B.Tech from <em>Delhi Technological University</em> in the field of <em>Electronics and Communication</em>.</p>
+      <h2>Hello</h2>
+      <p class="intro">I am working as an Advanced Application Engineering Analyst at <em>Accenture</em></p>
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>My Skills</h2>
       <div class="skill-row">
         <img class="code" src="code.png" alt="">
         <h3>Programming Languages</h3>
         <ul>
           <li>C/C++</li>
           <li>Javascript</li>
+          <li>JAVA</li>
+          <li>Python</li>
+          <li>Assembly</li>
           <li>VHDL</li>
-          <li>Verilog</li>
         </ul>
       </div>
       <br>
@@ -46,6 +48,7 @@
         <ul>
           <li>Nvidia Jetson</li>
           <li>Arduino</li>
+          <li>STM32</li>
         </ul>
       </div>
       <br>
@@ -62,8 +65,8 @@
           <li>React</li>
           <li>MongoDB</li>
           <li>Orcad</li>
-          <li>jQuery</li>
-          <li>Bootstrap</li>
+          <li>Xilinx</li>
+          <li>MPLAB</li>
         </ul>
       </div>
       
@@ -107,8 +110,8 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/yash-jindal-19aa661a8">LinkedIn</a>
-    <a class="footer-link" href="https://api.whatsapp.com/send?phone=+919056537831&text=&source=&data=&app_absent=">Whatsapp</a>
-    <p class="copyright">© 2021 Yash Jindal.</p>
+    <a class="footer-link" href="https://wa.me/+917009782337">Whatsapp</a>
+    <p class="copyright">© 2024 Yash Jindal.</p>
   </div>
 
 
